working on user and device swagger docs
